@@ -48,18 +48,17 @@ function ctools_modal_add_js() {
     return;
   }
 
-  $settings = array('CToolsModal' => array(
-    'closeText' => t('Close Window'),
-    'closeImage' => theme('image', ctools_image_path('icon-close-window.png'), t('Close window'), t('Close window')),
-    'throbber' => theme('image', ctools_image_path('throbber.gif'), t('Loading...'), t('Loading')),
-    'backDropOpacity' => '.55',
-    'backDropColor' => '#fff'
-  ));
+  $settings = array(
+    'CToolsModal' => array(
+      'loadingText' => t('Loading...'),
+      'closeText' => t('Close Window'),
+      'closeImage' => theme('image', ctools_image_path('icon-close-window.png'), t('Close window'), t('Close window')),
+      'throbber' => theme('image', ctools_image_path('throbber.gif'), t('Loading...'), t('Loading')),
+    ),
+  );
 
   drupal_add_js($settings, 'setting');
   drupal_add_js('misc/jquery.form.js');
-  ctools_add_js('dimensions');
-  ctools_add_js('mc');
   ctools_add_js('ajax-responder');
   ctools_add_js('modal');
 
